[tool.poetry]
name = "dpytools"
version = "0.0.20a"
description = "Simple tools to build discord bots using discord.py"
keywords=["discord", "discord.py", "discord bot"]
authors = ["chrisdewa <alexdewa@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/chrisdewa/dpytools"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
packages = [
    {include = "dpytools"}
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
